--- a/style.css
+++ b/style.css
@@ -1,17 +1,54 @@
 body {
-	background: gray;
-	color: white;
+	background: white;
+	color: black;
+
 }
 
 div {
 	background-color: white;
+	height: 480px;
+	width: 480px;
+	margin: auto;
 }
 .box {
 	background-color: teal;
+	line-height: 150px;
 	height: 150px;
 	width: 150px;
 	border: 5px dotted white;
+	float: left;
+	font-size: 100px;
+	text-align: center;
+	vertical-align: center;
 }
 #boxOne {
+	border-top: 5px solid teal;
+	border-left: 5px solid teal;
+}
+#boxTwo {
+	border-top: 5px solid teal;
+}
+#boxThree {
+	border-top: 5px solid teal;
+	border-right: 5px solid teal;
+}
+/*
+#boxTwo {
 
 }
+#boxTwo {
+
+}
+#boxTwo {
+
+}
+#boxTwo {
+
+}
+#boxTwo {
+
+}
+#boxTwo {
+
+}
+*/
