--- a/style.css
+++ b/style.css
@@ -21,24 +21,35 @@ div {
 	text-align: center;
 	vertical-align: center;
 }
-
+.reset {
+	background-color: teal;
+	margin: 20px auto;
+	line-height: 100px;
+	height: 100px;
+	width: 200px;
+	font-size: 50px;
+	text-align: center;
+	vertical-align: center;
+	border-radius: 20px;
+	border: 5px solid gray;
+}
+.reset:hover {
+	background-color: gray;
+	border: 5px solid gray;	
+}
 
 .x {
-	color: red;
-	background-color: black;
-}
-.o {
 	color: black;
 }
-
-
-
-
+.o {
+	color: white;
+}
 
 
 #boxOne {
 	border-top: 5px solid teal;
 	border-left: 5px solid teal;
+	border-radius: 
 }
 #boxTwo {
 	border-top: 5px solid teal;
@@ -47,26 +58,28 @@ div {
 	border-top: 5px solid teal;
 	border-right: 5px solid teal;
 }
-/*
-#boxFour {
 
+#boxFour {
+	border-left: 5px solid teal;
 }
 #boxFive {
-
+/*	intentionally left blank*/
 }
 #boxSix {
-
+	border-right: 5px solid teal;
 }
 #boxSeven {
-
+	border-left: 5px solid teal;
+	border-bottom: 5px solid teal;	
 }
 #boxEight {
-
+	border-bottom: 5px solid teal;
 }
 #boxNine {
-
+	border-right: 5px solid teal;
+	border-bottom: 5px solid teal;
 }
-*/
+
 
 
 
